# acdc-daq

./: .gitignore  .test.sh.swp  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  Makefile.miles  README.md  acdc.conf  acdc_master.conf  clk-set-config.sh  cmake_install.cmake  config.sh  log.sh  make-usbreset.sh  prereqs.cmake  pulse.sh  run_long.py  self-trig-params  set-config.sh  single_shot.py  test.sh  test.sh~  usbreset  usbreset.c
Configurator/: configurator.py
ROOT-conversion/: Convert-ACDC-Data.C
ROOT-conversion-and-calibration/: Convert-ACDC-Data.C  Convert-LUT-Data.C  ConvertACDCdata.C  ConvertACDCdata.cpp  ConvertLUTdata.cpp
calibrations/: .PED_DATA_3.txt.swp  PED_DATA_0.txt  PED_DATA_3.txt  PED_DATA_RMS_0.txt  PED_DATA_RMS_1.txt  PED_DATA_RMS_3.txt  PED_DATA_RMS_7.txt
cmake/: yamlcpp.cmake
config/: ACDC-hithresh.config  ACDC.config  ACDC.config~  ACDC5.config  defatults.yml  defaults.yml  falling_pulse.yml  lappd.yml  pulse.config  rising_pulse.yml  trig-laserstand.config  trig-pulse.config  trig.config  trig.config~  trig2.config  trig3.config  trig4.config  trig5.config  trig6.config  trig_mask_helper.py  trigoff.config  trigoff.config~
data/: test.acdc
docs/: Tutorial.MD
include/: #stdUSB.h#  DAQinstruction.h__  Definitions.h  Packet.h  ScopePipe.h  SuMo.h  SuMo.h~  SuMoInterface.h  Timer.h  config.h  oscilloscope.h  stdUSB.h
lib/: DAQinstruction.cpp  GetAcdcPackets.cpp  GetSysPackets.cpp  ScopePipe.cpp  SuMo.cpp  SuMoInterface.cpp  SuMoInterface.h  config.cpp  dataIO.cpp  form_meta_data.cpp  oscilloscope.cpp  setConfig.cpp
lib/calibration/: loadPedandLin.cpp  makePedandLin.cpp
lib/usb/: stdUSBl.cpp  stdUSBl_Slave.cpp  usbResetDevice.C
src/: .logData.cpp.swp  Automated_SelfTrig.cpp  Automated_SelfTrig_Cutoffs.cpp  Automation.cpp  DAQinstruction.cpp  GetAcdcPackets.cpp  GetSysPackets.cpp  LogData.cpp  Reset.cpp  ScopePipe.cpp  ScopePipe.cppOLD  SuMo.cpp  SuMo_driver.cpp  calEn.cpp  daq.cpp  dataIO.cpp  dumpData.cpp  form_meta_data.cpp  getData.cpp  logData.cpp  logData.cppOLD  logData.edit20150328  logH5Data.cpp  log_data.cpp  log_data_hd5.cpp  log_data_hd5.cppOLD  log_data_hd5_old.cpp  makeLUT.cpp  makePedandLin.cpp  make_ped_and_lin.cpp  oScope.cpp  oscilloscope.cpp  readACDC.cpp  readCC.cpp  resetDll.cpp  saveWaveforms.cpp  setConfig.cpp  setPed.cpp  setupLVDS.cpp  stdUSBl.cpp  (+2 more)
src/calibration/: loadPedandLin.cpp  makePedandLin.cpp  makePedandLin.cpp~
src/functions/: #dumpData.cpp#  Reset.cpp  calEn.cpp  dumpData.cpp  ledEn.cpp  logData.cpp  makeLUT.cpp  readACDC.cpp  readCC.cpp  resetACDC.cpp  resetDll.cpp  setPed.cpp  setTrig.cpp  setupLVDS.cpp  takePed.cpp  toggle_led.cpp
src/tests/: test_logData.cpp
src/usb/: stdUSBl.cpp  stdUSBl_Slave.cpp  usb_commands.cpp  usbreset.c
tests/: test_logData
